Styled error box to ensure it's always visible

--- a/css/style.css
+++ b/css/style.css
@@ -22,6 +22,18 @@
 		margin-right: 20%;
 	}
 
+	#errors {
+		position: fixed;
+		left: 50%;
+		bottom: 52px;
+		padding: 1em;
+		z-index: 1;
+		transform: translateX(-50%);
+		color: #FFF;
+		background: #600;
+		border-radius: 10px 10px 0 0;
+	}
+	
 	.error {
 		background: red !important;
 	}
